--- a/index.html
+++ b/index.html
@@ -13,28 +13,19 @@
     <div id="drag-container">
         <div id="spin-container">
             <!-- Add your images (or video) here -->
-            <img src="https://images.pexels.com/photos/206395/pexels-photo-206395.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                alt="" />
-            <img src="https://images.pexels.com/photos/1391498/pexels-photo-1391498.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                alt="" />
-            <img src="https://images.pexels.com/photos/1382731/pexels-photo-1382731.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                alt="" />
-            <img src="https://images.pexels.com/photos/1758144/pexels-photo-1758144.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                alt="" />
-            <img src="https://images.pexels.com/photos/1382734/pexels-photo-1382734.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                alt="" />
-            <img src="https://images.pexels.com/photos/1462636/pexels-photo-1462636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                alt="" />
+            <img src="./access/picture/picture_1.jpg" alt="" />
+            <img src="./access/picture/picture_2.jpg" alt="" />
+            <img src="./access/picture/picture_3.jpg" alt="" />
+            <img src="./access/picture/picture_4.jpg" alt="" />
+            <img src="./access/picture/picture_5.jpg" alt="" />
+            <img src="./access/picture/picture_6.jpg" alt="" />
             <!-- Example image with link -->
-            <a target="_blank" href="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg">
-                <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                    alt="" />
+            <a target="_blank" href="./access/picture/picture_7.jpeg">
+                <img src="./access/picture/picture_7.jpeg" alt="" />
             </a>
             <!-- Example add video  -->
             <video controls autoplay="autoplay" loop>
-                <source
-                    src="https://player.vimeo.com/external/322244668.sd.mp4?s=338c48ac2dfcb1d4c0689968b5baf94eee6ca0c1&profile_id=165&oauth2_token_id=57447761"
-                    type="video/mp4" />
+                <source src="./access/video/video.mp4" type="video/mp4" />
             </video>
             <!-- Text at center of ground -->
             <p>HAPPY BIRTHDAY MY LOVE</p>
