--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <img src="./access/picture/picture_4.jpg" alt="" />
             <img src="./access/picture/picture_5.jpg" alt="" />
             <img src="./access/picture/picture_6.jpg" alt="" />
+            <img src="./access/picture/picture_7.jpeg" alt="" />
             <!-- Example image with link -->
-            <a target="_blank" href="./access/picture/picture_7.jpeg">
+            <!-- <a target="_blank" href="./access/picture/picture_7.jpeg">
                 <img src="./access/picture/picture_7.jpeg" alt="" />
-            </a>
+            </a> -->
             <!-- Example add video  -->
             <video controls autoplay="autoplay" loop>
                 <source src="./access/video/video.mp4" type="video/mp4" />
