--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                 </svg>
             </p>
         </div>
+        <div>
+            <audio controls autoplay hidden>
+                <source src="./access/music/happybirthday.mp3" type="audio/mp3">
+            </audio>
+        </div>
         <div id="ground"></div>
     </div>
 </body>
