--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             </p>
         </div>
         <div>
-            <audio controls autoplay hidden>
-                <source src="./access/music/happybirthday.mp3" type="audio/mp3">
-            </audio>
+            <iframe src="./access/music/happybirthday.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
         </div>
         <div id="ground"></div>
     </div>
