--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
         </div>
         <div>
-            <iframe src="./access/music/happybirthday.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+            <iframe src="./access/music/happybirthday.mp3" allow="autoplay" id="audio" hidden></iframe>
         </div>
         <div id="ground"></div>
     </div>
